fix: get rid of the extra gap on the right side of the page
This was caused by the combination of content-box box sizing with 100%
width and additional horizontal padding.

--- a/theme/styles/page-navbar.scss
+++ b/theme/styles/page-navbar.scss
@@ -124,9 +124,7 @@
 		@include top-sheet();
 		content: "";
 		display: block;
-		height: $navbar-height;
-		padding-bottom: 20px; // For the fuzzy border.
-		box-sizing: content-box;
+		height: $navbar-height + 20px; // For the fuzzy border.
 	}
 
 	&__logo {
